--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "main": "dist/index.cjs.js",
   "module": "dist/index.es.js",
   "types": "dist/index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "https://gitlab.com/stijlbreuk/klokwerk"
+  },
   "scripts": {
     "test": "jest",
     "lint": "eslint",
