--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "test": "jest",
     "lint": "eslint",
     "build": "eslint && jest && rollup -c",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "prepublish": "npm run build"
   },
   "keywords": [
     "date",
