--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "klokwerk",
   "version": "0.1.0",
-  "description": "Chainable, immutable date object.",
+  "description": "Modern, immutable & chainable date objects!",
   "main": "./dist/index.cjs.js",
   "module": "./dist/index.es.js",
   "types": "./dist/index.d.ts",
   "repository": {
     "type": "git",
-    "url": "https://gitlab.com/stijlbreuk/klokwerk"
+    "url": "https://github.com/stijlbreuk/klokwerk"
   },
   "scripts": {
     "test": "jest",
